--- a/HTML5 - CSS/style.css
+++ b/HTML5 - CSS/style.css
@@ -1,8 +1,9 @@
 *{
-margin: 0;
+margin: auto;
 padding: 0;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+font-family: Verdana;
+width: 900px;
+} 
 
 #title, .subtitle, .post_title{
     color: #505050;
@@ -14,7 +15,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .post_title{
-    font-size: 10px;
+    font-size: px;
     font-style: italic;
     margin-bottom: 15px;
 }
@@ -23,26 +24,46 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #fff;
     padding: 15px;
     border: 6px solid #505050;
-    margin: 50px;
     border-radius: 20px;
+    text-align: center;
+    margin: 15px 0;
 }
 
 a{
     color: #505050;
     text-decoration: underline;
-}
+} */
 
 a:hover{
     color: black;
-}
+} 
 
 .post_content{
     margin: 15px;
     padding: 15px;
     border: 5px dashed black;
     border-radius: 15px;
+    width: auto;
 }
 
 .post_img{
     margin-bottom: 15px;
+    width: 100%;
+    max-width: 600px;
+}
+
+.contacts_list{
+padding-left: 30px;
+}
+
+.contacts_list ul{
+    list-style-type: none;
+}
+
+.contacts_list li a{
+    text-decoration: none;
+}
+
+.contacts_list li a:hover{
+    text-decoration: underline;
 }
